<resources>
    <string name="app_name">Lesson1</string>
    <string name="username_text">请输入用户名</string>
    <string name="password_text">请输入密码</string>
    <string name="enter_text">点击登录</string>
    <string name="registered_text">立即注册</string>
    <string name="forget_password">忘记密码？</string>
    <string name="birthday_text">赵源生日快乐!</string>
    <string name="user_text">姓名</string>
    <string name="phone_text">手机号</string>
    <string name="male_text">男</string>
    <string name="gender_text">性别</string>
    <string name="female_text">女</string>
    <string name="love_class_text">我喜欢的课程</string>
    <string name="android_text">Android</string>
    <string name="java_text">Java语言</string>
    <string name="math_text">高等数学</string>
    <string name="english_text">大学英语</string>
    <string name="login_text">确定</string>
    <string name="bmi_text">BMI计算器</string>
    <string name="weight_text">输入体重,单位公斤</string>
    <string name="height_text">输入身高，单位米</string>
    <string name="calculate_text">计算</string>
</resources>